# nn-circuits

./: hello.py  image.py  layer.py  main.py  pyproject.toml
